--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 }
 body{
     height: auto;
-    background-color: rgb(0,0,0);
+    background-color: black;
 }
 h1{
-    color: rgb(255,0,0);
+    color: red;
     text-align: center;
     font-size: 2.5em;
     font-weight: 250;
@@ -81,7 +81,7 @@ h1{
     background: none;
     outline: none;
     border: none;
-    color: rgb(255,0,0);
+    color: red;
     cursor: pointer;
 }
 
